--- a/WebAPI_Passenger/appsettings.json
+++ b/WebAPI_Passenger/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "DatabaseSettings": {
+    "RemovedPassengerCollectionName": "RemovedPassenger",
+    "RestrictPassengerCollectionName": "RestrictPassenger",
     "PassengerCollectionName": "Passenger",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "WebAPI_OnTheFly"
